# LedDisplay

./: .gitignore  .gitmodules  CMakeLists.txt  aarch64-toolchain.cmake  main.cpp  main.py  screen.cpp  screen.py
includes/: fonts.h  screen.h
screens/: spotify.py  time.py
